# finding-success-in-haskell

./: FindingSuccessInHaskell.cabal  README.md  makefile  stack.yaml
app/: Main.hs
src/FindingSuccessInHaskell/: Chapter01.hs  Chapter02.hs  Chapter04.hs  ValidationBook.hs
test/FindingSuccessInHaskell/: Chapter01Spec.hs  Chapter02Spec.hs  ValidationBookSpec.hs
