name:                FindingSuccessInHaskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stubillwhite/finding-success-in-haskell
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FindingSuccessInHaskell.Chapter01,
                       FindingSuccessInHaskell.Chapter02,
                       FindingSuccessInHaskell.Chapter04,
                       FindingSuccessInHaskell.ValidationBook
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable FindingSuccessInHaskell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FindingSuccessInHaskell
  default-language:    Haskell2010

test-suite FindingSuccessInHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , FindingSuccessInHaskell
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stubillwhite/FIXME
